--- a/stock/pubspec.yaml
+++ b/stock/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   http: ^0.12.0+4
   flutter_html: ^1.1.1
+  provider: ^4.3.2+3
+  cached_network_image: ^2.2.0+1
 
 dev_dependencies:
   flutter_test:
