--- a/stock/pubspec.yaml
+++ b/stock/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_html: ^1.1.1
   provider: ^4.3.2+3
   cached_network_image: ^2.2.0+1
+  firebase_auth: ^0.16.1
 
 dev_dependencies:
   flutter_test:
